third_party/move/move-compiler-v2/tests/more-v1/expansion/standalone_name_with_type_args.exp

Diagnostics:
error: undeclared `n`
  ┌─ tests/more-v1/expansion/standalone_name_with_type_args.move:3:17
  │
3 │         let _ = n<u64>;
  │                 ^
